--- a/src/pages/users/login.less
+++ b/src/pages/users/login.less
@@ -9,6 +9,16 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
 }
+.forgetPassword-comp {
+  height: 280px;
+}
+.forgetPassword-comp_header {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #888;
+  text-align: center;
+}
 .login-comp_header {
   display: flex;
   align-items: center;
