--- a/src/layouts/BaseLayout.less
+++ b/src/layouts/BaseLayout.less
@@ -239,3 +239,16 @@ body {
   padding: 2px;
   display: flex;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+.mr-10 {
+  margin-right: 10px;
+}
+.mr-8 {
+  margin-right: 8px;
+}
+.mx-8 {
+  margin: 0 8px;
+}
