--- a/src/components/Search/index.less
+++ b/src/components/Search/index.less
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 10px 0 20px;
 }
 
 .search-comp .close-tip {
