--- a/src/layouts/BaseLayout.less
+++ b/src/layouts/BaseLayout.less
@@ -252,3 +252,27 @@ body {
 .mx-8 {
   margin: 0 8px;
 }
+
+.table-header-comp {
+  position: fixed;
+  height: 72px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  left: 270px;
+  width: calc(100% - 360px);
+  transition: 0.3s;
+
+  &.smallLeft {
+    width: calc(100% - 240px);
+    left: 150px;
+  }
+  .mr-10 {
+    margin-right: 10px;
+  }
+  .right {
+    display: flex;
+    align-items: center;
+  }
+}
